--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -14,6 +14,11 @@ html, body {
     max-height: auto;
 }
 
+.msg {
+  height: auto;
+  margin-bottom:0.8em;
+}
+
 .send-cell {
   text-align: right;
 }
